fixing tel on safari

--- a/wp-content/themes/gkc_theme/assets/styles/homePage.css
+++ b/wp-content/themes/gkc_theme/assets/styles/homePage.css
@@ -15,6 +15,11 @@ body {
     color: #677897
 }
 
+a[href^=tel] {
+    text-decoration: inherit;
+    color: inherit;
+}
+
 .header {
     width: 100%;
     /* display: -webkit-flexbox !important; */
